src/main/resources/api/examples/errors/error-example-422.raml
#%RAML 1.0 NamedExample
values:
  message: Unprocessable Entity
  errors:  
    - #item 1
      "code": xxx-000
      "message": The request was well-formed but was unable to be followed due to semantic errors.